# property-insights-assistant

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agent/: __init__.py  db.py  eval.py  eval_cases.json  graph.py  llm.py  retriever.py  review.py  run.py
data/: bookings.csv  bookings_update.csv  listings.json
docs/: design.md
ml/: metrics.json  model.py
notebooks/: agent_pipeline_walkthrough.ipynb
tests/: conftest.py  test_db.py  test_eval.py  test_graph.py  test_llm.py  test_ml.py  test_retriever.py
