[project]
name = "property-insights-assistant"
version = "0.1.0"
description = "An agent that answers questions about a portfolio of short-stay property listings and their bookings, backed by SQL, RAG, and a cancellation-risk model."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "joblib>=1.3",
    "groq>=0.11",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "ml"]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# prompt template strings are natural-language prose, not code — wrapping
# them to fit a code line-length limit hurts readability for no benefit
"agent/llm.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
